crates/ass-parser/tests/snapshots/libass_compat__libass_compat__error_invalid_timestamp.snap
---
source: crates/ass-parser/tests/libass_compat.rs
expression: output
---
strict_ok: false
recovery_warnings: 0
recovery_errors: 1
recovery_events: 2
