crates/ass-parser/tests/snapshots/libass_compat__libass_compat__ssa_v4_color_as_decimal.snap
---
source: crates/ass-parser/tests/libass_compat.rs
expression: output
---
strict_ok: true
recovery_warnings: 0
recovery_errors: 0
recovery_events: 1
